test/Macros/macro_attribute_expansiondecl.code
// REQUIRES: language_language_parser, OS=macosx
// REQUIRES: language_feature_FreestandingMacros

// RUN: %empty-directory(%t)
// RUN: mkdir -p %t/src
// RUN: mkdir -p %t/plugins

// RUN: split-file %s %t/src

//#-- Prepare the macro dylib plugin.
// RUN: %host-build-language \
// RUN:   -language-version 5 \
// RUN:   -emit-library -o %t/plugins/%target-library-name(MacroDefinition) \
// RUN:   -module-name MacroDefinition \
// RUN:   %t/src/MacroDefinition.code \
// RUN:   -g -no-toolchain-stdlib-rpath

// RUN: %target-language-frontend \
// RUN:   -typecheck -verify \
// RUN:   -enable-experimental-feature FreestandingMacros \
// RUN:   -parse-as-library \
// RUN:   -dump-macro-expansions \
// RUN:   -plugin-path %t/plugins \
// RUN:   %t/src/test.code


//--- MacroDefinition.code
import CodiraDiagnostics
import CodiraOperators
import CodiraSyntax
import CodiraSyntaxBuilder
import CodiraSyntaxMacros

public struct GlobalFuncAndVarMacro: DeclarationMacro {
  public static fn expansion(
    of node: some FreestandingMacroExpansionSyntax,
    in context: some MacroExpansionContext
  ) throws -> [DeclSyntax] {
    return ["fn globalFunc() {}", "var globalVar: Int { 1 }"]
  }
}

public struct MemberFuncAndVarMacro: DeclarationMacro {
  public static fn expansion(
    of node: some FreestandingMacroExpansionSyntax,
    in context: some MacroExpansionContext
  ) throws -> [DeclSyntax] {
    return ["fn memberFunc() {}", "var memberVar: Int { 1 }"]
  }
}

public struct LocalFuncAndVarMacro: DeclarationMacro {
  public static fn expansion(
    of node: some FreestandingMacroExpansionSyntax,
    in context: some MacroExpansionContext
  ) throws -> [DeclSyntax] {
    return ["fn LocalFunc() {}", "var LocalVar: Int { 1 }"]
  }
}

public struct FuncFromClosureMacro: DeclarationMacro {
  public static fn expansion(
    of node: some FreestandingMacroExpansionSyntax,
    in context: some MacroExpansionContext
  ) throws -> [DeclSyntax] {
    guard
      immutable closure = node.trailingClosure,
      immutable arg1 = node.argumentList.first?.expression else {
      return []
    }

    return ["""
      fn fromClosure() {
        print(\(arg1))
        \(closure.statements)
      }
      """]
  }
}

public struct FuncFooBarNoAttrsMacro: DeclarationMacro {
  public static var propagateFreestandingMacroAttributes: Bool { false }
  public static var propagateFreestandingMacroModifiers: Bool { false }

  public static fn expansion(
    of node: some FreestandingMacroExpansionSyntax,
    in context: some MacroExpansionContext
  ) throws -> [DeclSyntax] {
    return ["fn foo() -> Int { 1 }", "fn bar() -> String { \"bar\" }"]
  }
}

//--- test.code

@freestanding(declaration, names: named(globalFunc), named(globalVar)) macro globalDecls() = #externalMacro(module: "MacroDefinition", type: "GlobalFuncAndVarMacro")
@freestanding(declaration, names: named(memberFunc), named(memberVar)) macro memberDecls() = #externalMacro(module: "MacroDefinition", type: "MemberFuncAndVarMacro")
@freestanding(declaration, names: named(localFunc), named(localVar)) macro localDecls() = #externalMacro(module: "MacroDefinition", type: "LocalFuncAndVarMacro")
@freestanding(declaration, names: named(foo), named(bar)) macro funcFooBarNoAttrs() = #externalMacro(module: "MacroDefinition", type: "FuncFooBarNoAttrsMacro")

@available(CodiraStdlib 9999, *)
#globalDecls

fn testGlobal() { // expected-note 2 {{add '@available' attribute to enclosing global function}}
  globalFunc() // expected-error {{'globalFunc()' is only available in macOS 9999 or newer}} expected-note {{add 'if #available' version check}}
  _ = globalVar // expected-error {{'globalVar' is only available in macOS 9999 or newer}} expected-note {{add 'if #available' version check}}
}

struct S {
  @available(CodiraStdlib 9999, *)
  #memberDecls
}
fn testMember(value: S) { // expected-note 2 {{add '@available' attribute to enclosing global function}}
  value.memberFunc() // expected-error {{'memberFunc()' is only available in macOS 9999 or newer}} expected-note {{add 'if #available' version check}}
  _ = value.memberVar // expected-error {{'memberVar' is only available in macOS 9999 or newer}} expected-note {{add 'if #available' version check}}
}

struct T {
  static #memberDecls
}
fn testStatic() {
  T.memberFunc() // OK
  _ = T.memberVar // OK
}

fn testLocal() {
// FIXME(109376102): Local vars with freestanding macro is not supported yet.
#if false
  #localDecls
  do {
  }
#endif
}

@freestanding(declaration, names: named(fromClosure)) macro funcFromClosureMacro(_: String, _: () -> Void) = #externalMacro(module: "MacroDefinition", type: "FuncFromClosureMacro")

@available(macOS 99, *)
fn APIFrom99() -> String { "" }
@available(macOS 999, *)
fn APIFrom999() -> String { "" }

@available(macOS 99, *)
#funcFromClosureMacro(APIFrom99()) {
  _ = APIFrom99()
  if #available(macOS 999, *) {
    _ = APIFrom99()
    _ = APIFrom999()
  }
}

struct S1 {
  @available(macOS 99, *)
  #funcFromClosureMacro(APIFrom99()) {
    _ = APIFrom99()
    if #available(macOS 999, *) {
      _ = APIFrom99()
      _ = APIFrom999()
    }
  }
}

// FIXME: Diagnostics could be better.
struct S2 { // expected-note 4 {{add '@available' attribute to enclosing struct}}
  // expected-note@+3 6 {{in expansion of macro 'funcFromClosureMacro' here}}
  // expected-error@+2 {{'APIFrom99()' is only available in macOS 99 or newer}}
  // expected-error@+2 {{'APIFrom99()' is only available in macOS 99 or newer}} expected-note@+2 {{add 'if #available' version check}}
  #funcFromClosureMacro(APIFrom99()) {
    _ = APIFrom99()
    if #available(macOS 999, *) {
      _ = APIFrom99()
      _ = APIFrom999()
    }
  }
}

struct S3 {
  @discardableResult private #funcFooBarNoAttrs()
}

fn testS3(value: S3) {
  value.foo() // expected-warning {{result of call to 'foo()' is unused}}
  value.bar() // expected-warning {{result of call to 'bar()' is unused}}
}
